--- a/views/product-detail.ejs
+++ b/views/product-detail.ejs
@@ -1,155 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title><%= general_info.business_name %> - Furniture Ecommerce | <%= product.title %></title>
+    <title>
+      <%= general_info.business_name %> - Furniture Ecommerce | <%=
+      product.title %>
+    </title>
 
     <!-- Favicon  -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <link rel="icon" href="img/core-img/favicon.ico" />
 
     <!-- Core Style CSS -->
-    <link rel="stylesheet" href="css/core-style.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/core-style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
+  <body>
     <!-- ##### Main Content Wrapper Start ##### -->
     <div class="main-content-wrapper d-flex clearfix">
-
-        <!-- Mobile Nav (max width 767px)-->
-        <div class="mobile-nav">
-            <!-- Navbar Brand -->
-            <div style="font-size:36px">
-                <i class="fa fa-building red"></i><%= general_info.business_name %>
-            </div>
-            <!-- Navbar Toggler -->
-            <div class="amado-navbar-toggler">
-                <span></span><span></span><span></span>
-            </div>
+      <!-- Mobile Nav (max width 767px)-->
+      <div class="mobile-nav">
+        <!-- Navbar Brand -->
+        <div style="font-size:36px">
+          <i class="fa fa-building red"></i><%= general_info.business_name %>
         </div>
+        <!-- Navbar Toggler -->
+        <div class="amado-navbar-toggler">
+          <span></span><span></span><span></span>
+        </div>
+      </div>
 
-        <!-- Header Area Start -->
-        <header class="header-area clearfix">
-            <!-- Close Icon -->
-            <div class="nav-close">
-                <i class="fa fa-close" aria-hidden="true"></i>
-            </div>
-            <!-- Logo -->
-            <div style="font-size:36px">
-                <i class="fa fa-building red"></i><%= general_info.business_name %>
-            </div>
-        </header>
-        <!-- Header Area End -->
+      <!-- Header Area Start -->
+      <header class="header-area clearfix">
+        <!-- Close Icon -->
+        <div class="nav-close">
+          <i class="fa fa-close" aria-hidden="true"></i>
+        </div>
+        <!-- Logo -->
+        <div style="font-size:36px">
+          <i class="fa fa-building red"></i><%= general_info.business_name %>
+        </div>
+      </header>
+      <!-- Header Area End -->
 
-        <!-- Product Details Area Start -->
-        <div class="single-product-area section-padding-100 clearfix">
-            <div class="container-fluid">
-
-                <div class="row">
-                    <div class="col-12 col-lg-7">
-                        <div class="single_product_thumb">
-                            <div id="product_details_slider" class="carousel slide" data-ride="carousel">
-                                <ol class="carousel-indicators">
-                                    <li class="active" data-target="#product_details_slider" data-slide-to="0" style="background-image: url(img/product-img/<%= product.id %>.jpg);">
-                                    </li>
-                                </ol>
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <a class="gallery_img" href="img/product-img/<%= product.id %>.jpg">
-                                            <img class="d-block w-100" src="img/product-img/<%= product.id %>.jpg" alt="First slide">
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+      <!-- Product Details Area Start -->
+      <div class="single-product-area section-padding-100 clearfix">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 col-lg-7">
+              <div class="single_product_thumb">
+                <div
+                  id="product_details_slider"
+                  class="carousel slide"
+                  data-ride="carousel"
+                >
+                  <ol class="carousel-indicators">
+                    <li
+                      class="active"
+                      data-target="#product_details_slider"
+                      data-slide-to="0"
+                      style="background-image: url(img/product-img/<%= product.id %>.jpg);"
+                    ></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <a
+                        class="gallery_img"
+                        href="img/product-img/<%= product.id %>.jpg"
+                      >
+                        <img
+                          class="d-block w-100"
+                          src="img/product-img/<%= product.id %>.jpg"
+                          alt="First slide"
+                        />
+                      </a>
                     </div>
-                    <div class="col-12 col-lg-5">
-                        <div class="single_product_desc">
-                            <!-- Product Meta Data -->
-                            <div class="product-meta-data">
-                                <div class="line"></div>
-                                <p class="product-price"><%= product.price %></p>
-                                <h6><%= product.title %></h6>
-                                <!-- Ratings & Review -->
-                                <div class="ratings-review mb-15 d-flex align-items-center justify-content-between">
-                                    <div class="ratings">
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                    </div>
-                                </div>
-                                <!-- Avaiable -->
-                                <p class="avaibility"><i class="fa fa-circle"></i> <%= product.availability %></p>
-                            </div>
-
-                            <div class="short_overview my-5">
-                                <p><%= product.description %></p>
-                            </div>
-
-                            <!-- Add to Cart Form -->
-                            <form class="cart clearfix" method="post">
-                                <div class="cart-btn d-flex mb-50">
-                                    <p>Qty</p>
-                                    <div class="quantity">
-                                        <span class="qty-minus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;"><i class="fa fa-caret-down" aria-hidden="true"></i></span>
-                                        <input type="number" class="qty-text" id="qty" step="1" min="1" max="300" name="quantity" value="1">
-                                        <span class="qty-plus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;"><i class="fa fa-caret-up" aria-hidden="true"></i></span>
-                                    </div>
-                                </div>
-                                <button type="submit" name="addtocart" value="5" class="btn amado-btn">Add to cart</button>
-                            </form>
-                            Related products:<br>
-                            <a href="https://<%= general_info.business_name %>.herokuapp.com/minimalist-plant-pot">Minimalist Plant Pot</a><br>
-                            <a href="https://<%= general_info.business_name %>.herokuapp.com/metallic-chair">Metallic Chair</a>
-                        </div>
-                    </div>
+                  </div>
                 </div>
+              </div>
             </div>
+            <div class="col-12 col-lg-5">
+              <div class="single_product_desc">
+                <!-- Product Meta Data -->
+                <div class="product-meta-data">
+                  <div class="line"></div>
+                  <p class="product-price"><%= product.price %></p>
+                  <h6><%= product.title %></h6>
+                  <!-- Ratings & Review -->
+                  <div
+                    class="ratings-review mb-15 d-flex align-items-center justify-content-between"
+                  >
+                    <div class="ratings">
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                      <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                  </div>
+                  <!-- Avaiable -->
+                  <p class="avaibility">
+                    <i class="fa fa-circle"></i> <%= product.availability %>
+                  </p>
+                </div>
+
+                <div class="short_overview my-5">
+                  <p><%= product.description %></p>
+                </div>
+
+                <!-- Add to Cart Form -->
+                <form class="cart clearfix" method="post">
+                  <div class="cart-btn d-flex mb-50">
+                    <p>Qty</p>
+                    <div class="quantity">
+                      <span
+                        class="qty-minus"
+                        onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;"
+                        ><i class="fa fa-caret-down" aria-hidden="true"></i
+                      ></span>
+                      <input
+                        type="number"
+                        class="qty-text"
+                        id="qty"
+                        step="1"
+                        min="1"
+                        max="300"
+                        name="quantity"
+                        value="1"
+                      />
+                      <span
+                        class="qty-plus"
+                        onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;"
+                        ><i class="fa fa-caret-up" aria-hidden="true"></i
+                      ></span>
+                    </div>
+                  </div>
+                  <button
+                    type="submit"
+                    name="addtocart"
+                    value="5"
+                    class="btn amado-btn"
+                  >
+                    Add to cart
+                  </button>
+                </form>
+                Related products:<br />
+                <a
+                  href="https://<%= general_info.business_name %>.herokuapp.com/minimalist-plant-pot"
+                  >Minimalist Plant Pot</a
+                ><br />
+                <a
+                  href="https://<%= general_info.business_name %>.herokuapp.com/metallic-chair"
+                  >Metallic Chair</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
-        <!-- Product Details Area End -->
+      </div>
+      <!-- Product Details Area End -->
     </div>
     <!-- ##### Main Content Wrapper End ##### -->
 
     <!-- ##### Footer Area Start ##### -->
     <footer class="footer_area clearfix">
-        <div class="container">
-            <div class="row align-items-center">
-                <!-- Single Widget Area -->
-                <div class="col-12 col-lg-4">
-                    <div class="single_widget_area">
-                        <!-- Copywrite Text -->
-                        <p class="copywrite"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="row align-items-center">
+          <!-- Single Widget Area -->
+          <div class="col-12 col-lg-4">
+            <div class="single_widget_area">
+              <!-- Copywrite Text -->
+              <p class="copywrite">
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                Copyright &copy;
+                <script>
+                  document.write(new Date().getFullYear());
+                </script>
+                All rights reserved | This template is made with
+                <i class="fa fa-heart-o" aria-hidden="true"></i> by
+                <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              </p>
             </div>
+          </div>
         </div>
+      </div>
     </footer>
     <!-- ##### Footer Area End ##### -->
-    
+
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="product" />
     <meta property="og:title" content="<%= product.title %>" />
-    <meta property="og:image" content="https://giobiz.herokuapp.com/img/product-img/<%= product.id %>.jpg" />
+    <meta
+      property="og:image"
+      content="https://giobiz.herokuapp.com/img/product-img/<%= product.id %>.jpg"
+    />
     <meta property="og:description" content="<%= product.description %>" />
-    <meta property="og:url" content="https://<%= general_info.business_name %>.herokuapp.com/<%= product.id %>" />
+    <meta
+      property="og:url"
+      content="https://<%= general_info.business_name %>.herokuapp.com/<%= product.id %>"
+    />
     <meta property="product:brand" content="Gio Biz" />
-    <meta property="product:availability" content="<%= product.availability %>" />
+    <meta
+      property="product:availability"
+      content="<%= product.availability %>"
+    />
     <meta property="product:condition" content="<%= product.condition %>" />
     <meta property="product:retailer_item_id" content="<%= product.id %>" />
-    <meta property="product:price:amount" content="<%= product.price.split(" ")[0] %>"/>
-    <meta property="product:price:currency" content="<%= product.price.split(" ")[1] %>"/>
-
+    <meta property="product:price:amount" content="<%= product.price.split("
+    ")[0] %>"/> <meta property="product:price:currency" content="<%=
+    product.price.split(" ")[1] %>"/>
 
     <!-- ##### jQuery (Necessary for All JavaScript Plugins) ##### -->
     <script src="js/jquery/jquery-2.2.4.min.js"></script>
@@ -163,33 +232,46 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/active.js"></script>
 
     <script>
-        !function(f,b,e,v,n,t,s)
-        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-            n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-        n.queue=[];t=b.createElement(e);t.async=!0;
-        t.src=v;s=b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t,s)}(window, document,'script',
-              'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '<%= general_info.pixel_id %>');
-        fbq('track', 'ViewContent', {
-            content_ids: ['<%= product.id %>'],
-            content_type: 'product',
-            value: '<%= product.price %>'.substring(0,3),
-            currency: 'USD'
-        });
+      !(function(f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function() {
+          n.callMethod
+            ? n.callMethod.apply(n, arguments)
+            : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = "2.0";
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
+      })(
+        window,
+        document,
+        "script",
+        "https://connect.facebook.net/en_US/fbevents.js"
+      );
+      fbq("init", "<%= general_info.pixel_id %>");
     </script>
     <% if(general_info.ga) {%>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-85683303-2"></script>
-        <script>
-              window.dataLayer = window.dataLayer || [];
-              function gtag(){dataLayer.push(arguments);}
-              gtag('js', new Date());
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-85683303-2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-              gtag('config', '<%= general_info.ga %> ');
-        </script>
+      gtag("config", "<%= general_info.ga %> ");
+    </script>
     <% } %>
-</body>
-
+  </body>
 </html>
